--- a/style.css
+++ b/style.css
@@ -3,24 +3,33 @@
     margin: 0;
 }
 
-.main-container {
-    background-color:  white;
+body {
+    background-color: rgb(188, 221, 250);
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.container {
+    background-color: white;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 300;
     font-display: swap;
+    width: 100%;
 }
-.first{
+
+.first {
     background-image: url(hero.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
+    padding-top: 2rem;
 }
 
 .head {
     display: flex;
     justify-content: space-between;
     margin: 0px 6rem;
-
     color: white;
     padding-top: 15px;
 }
@@ -36,23 +45,32 @@
 .nav ul {
     list-style-type: none;
     display: flex;
-
 }
 
 .nav ul li {
     padding: 0 1rem;
 }
 
-.profile ul {
+
+
+.profile {
     display: flex;
     list-style-type: none;
-}
-
-.profile ul li {
     margin: 0 2rem;
     color: white;
     font-weight: bold;
 }
+
+.profile p {
+    margin-right: 20px; 
+}
+
+.profile p:hover {
+    padding: 5px 10px;
+    background-color: #23a6f0;
+    color: white;
+}
+
 
 .brandname {
     font-weight: bold;
@@ -77,15 +95,19 @@
     justify-content: center;
     align-items: center;
     list-style-type: none;
-
 }
 
 .circles ul li {
     padding: 10px;
-    background-color: rgb(40, 128, 134);
     margin: 0 1rem;
     border-radius: 3rem;
     font-weight: bold;
+    background-color: gray;
+    border: solid white 1px;
+}
+
+.circles ul li:hover {
+    background-color: #23a6f0;
 }
 
 .circles,
@@ -110,11 +132,15 @@
     display: flex;
     justify-content: space-around;
 }
+.drawings ul{
+    display: flex;
+    
 
+}
 .drawings ul li {
     display: flex;
     flex-direction: column;
-    margin: 0 1rem;
+    margin: 0 8px;
     list-style-type: none;
     background-color: white;
     padding: 10px 40px 10px 10px;
@@ -130,48 +156,46 @@
     color: black;
 }
 
+.white:hover {
+    background-color: #23a6f0;
+}
+
+.white:hover ion-icon {
+    color: white !important;
+}
+
 .white p {
-    color: gray !important;
+    color: gray;
+}
+
+.white:hover p {
+    color: white !important;
+}
+
+.white:hover h2 {
+    color: white !important;
 }
 
 .white ion-icon {
-    color: rgb(58, 150, 167) !important;
+    color: #23a6f0 !important;
     font-size: 3rem;
-
-}
-
-.blue {
-    background-color: rgb(58, 150, 167) !important;
-}
-
-.blue ion-icon {
-    font-size: 3rem;
-}
-
-.blue h2,
-p,
-ion-icon {
-    color: white !important;
 }
 
 .gray {
     background-color: white;
     height: 7rem;
-
 }
 
 .icon-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 20rem;
+    margin: 48px 0 48px 0;
     background-color: white;
-
 }
 
 .pure-icons {
     width: 80%;
-
 }
 
 .pure-icons ul {
@@ -190,7 +214,7 @@ ion-icon {
 }
 
 .pure-icons ul li ion-icon {
-    color: rgb(44, 180, 151) !important;
+    color: #23a6f0 !important;
     font-size: 3rem;
     margin-bottom: 1rem;
 }
@@ -203,12 +227,10 @@ ion-icon {
     padding: 4rem 0;
     gap: 4rem;
     background-color: rgb(211, 204, 204);
-
 }
 
 .industry {
     text-align: center;
-
 }
 
 .industry>h1 {
@@ -224,7 +246,6 @@ ion-icon {
     justify-content: space-around;
     list-style-type: none;
     gap: 3rem;
-
 }
 
 .faces ul li {
@@ -254,8 +275,6 @@ ion-icon {
     padding: 4rem 0;
     gap: 2rem;
     background-color: white;
-
-
 }
 
 .companies {
@@ -270,7 +289,9 @@ ion-icon {
 
 .companies ul li {
     margin: 0 1rem;
-
+}
+.company-img{
+    width: 50px;
 }
 
 .news-letter {
@@ -279,7 +300,6 @@ ion-icon {
     justify-content: space-between;
     background: linear-gradient(to right, rgb(16, 79, 196), purple, rgb(196, 19, 196));
     padding: 1rem;
-
 }
 
 .profiles {
@@ -287,7 +307,7 @@ ion-icon {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: linear-gradient(to right, white 50%, rgb(58, 150, 167)50%);
+    background: linear-gradient(to right, white 50%, #23a6f0 50%);
     padding: 0 10px;
     border-radius: 5px;
 }
@@ -301,7 +321,6 @@ ion-icon {
 }
 
 .price {
-   
     text-align: center;
     margin-top: 3rem;
 }
@@ -317,13 +336,12 @@ ion-icon {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(1, 1fr);
     margin: 2rem 4rem;
-
-
 }
 
 .free {
     grid-area: free;
     gap: 20px;
+    border: solid rgb(58, 150, 167) 1px;
     background-color: white;
     border-radius: 5px;
     margin-top: 3rem;
@@ -335,14 +353,15 @@ ion-icon {
 
 .standard {
     grid-area: standard;
-    background-color: rgb(50, 50, 104);
     gap: 20px;
+    border: solid rgb(58, 150, 167) 1px;
+    background-color: white;
     border-radius: 5px;
+    margin-top: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
 }
 
 .premium {
@@ -356,6 +375,37 @@ ion-icon {
     flex-direction: column;
     align-items: center;
     padding: 2rem 0;
+}
+
+.free:hover,
+.premium:hover,
+.standard:hover {
+    background-color: #252b42;
+    gap: 20px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: -2rem;
+}
+
+.free h4,
+.premium h4,
+.standard h4 {
+    color: gray !important;
+}
+
+.free:hover,
+.premium:hover,
+.standard:hover>h2 {
+    color: white !important;
+}
+
+.free:hover h4,
+.premium:hover h4,
+.standard:hover>h4 {
+    color: white !important;
 }
 
 .offers {
@@ -373,7 +423,7 @@ ion-icon {
 
 .try {
     padding: 10px 40px;
-    background-color: rgb(58, 150, 167);
+    background-color: #23a6f0;
     border-radius: 5px;
 }
 
@@ -384,7 +434,7 @@ ion-icon {
 .world {
     display: flex;
     justify-content: space-around;
-    background-color: rgb(42, 55, 68);
+    background-color: #252b42;
     padding: 40px;
     padding-bottom: 20rem;
 }
@@ -414,7 +464,6 @@ ion-icon {
     grid-template-rows: 1, 1fr;
     padding: 2rem 0;
     margin-top: -15rem;
-
 }
 
 .faces {
@@ -429,7 +478,6 @@ ion-icon {
     align-items: center;
     padding-left: 2rem;
     padding-right: 4rem;
-
 }
 
 .appointment-profile h2 {
@@ -439,14 +487,12 @@ ion-icon {
 
 .btn {
     padding: 10px 4rem;
-    background-color: rgb(58, 150, 167);
+    background-color: #23a6f0;
     color: white;
     width: 100%;
     margin-top: 15px;
     border-radius: 3px;
     border: none;
-
-
 }
 
 .form .input-field {
@@ -471,13 +517,13 @@ ion-icon {
     justify-content: space-around;
     padding-bottom: 1rem;
     padding-top: 1rem;
-    background-color: rgb(231, 227, 227);
+    background-color: #fafafa;
     margin-top: 3rem;
 }
 
 .contact-us {
     padding: 10px 15px;
-    background-color: rgb(58, 150, 167);
+    background-color: #23a6f0;
 }
 
 .info {
@@ -499,7 +545,7 @@ ion-icon {
 }
 
 .information ion-icon {
-    color: rgb(58, 150, 167) !important;
+    color: #23a6f0 !important;
     font-size: 20px;
 }
 
@@ -507,13 +553,11 @@ footer {
     display: flex;
     justify-content: space-around;
     padding: 20px;
-
 }
 
 .footer-icons ion-icon {
-    color: rgb(58, 150, 167) !important;
+    color: #23a6f0 !important;
     font-size: 20px;
-
 }
 
 .footer-icons ul {
@@ -528,4 +572,131 @@ footer {
 
 .footer-words p {
     color: gray !important;
+}
+
+
+/*media queries*/
+@media screen and (max-width: 768px) {
+    body {
+        background-color: gray;
+        width: 100%;
+    }
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        font-size: medium;
+        width: 100%;
+        border: solid red 2px;
+    }
+    .head{
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .profile{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+
+    }
+    .brandname{
+        display: flex;
+        flex-direction: column;
+    }
+    .nav ul{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+
+    .drawings ul{
+        display: flex;
+        flex-direction: column;
+        gap: 90px;
+        width: 70%;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+    .pure-icons ul{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        gap: 10px;
+        
+
+    }
+    .industry{
+        width: 80%;
+        font-size: small;
+        display: flex;
+        flex-direction: column;
+        align-items:center ;
+    }
+    .faces ul{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        gap: 10px;
+        
+    }
+    .company-img{
+        width: 40px;
+
+    }
+    .companies ul{
+        width: 80%;
+    }
+   .news-letter{
+    width: 90%;
+    font-size: small;
+   }
+   .Pricing{
+    display: flex;
+    flex-direction: column;
+   }
+   .world{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+   }
+   .appointment{
+    display: flex;
+    flex-direction: column;
+
+   }
+   .business-consultancy{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+   }
+   .contact-us{
+    margin-left: 30px;
+    width: 50%;
+   
+    
+   }
+   .info{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+   }
+   .information ul{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+    
+
+   }
+   .information ul li{
+    color: rgb(88, 85, 85);
+    width: 100%;
+   }
+   
 }
