--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     font-weight: 300;
     font-display: swap;
     width: 100%;
+    
 }
 
 .first {
@@ -132,11 +133,7 @@ body {
     display: flex;
     justify-content: space-around;
 }
-.drawings ul{
-    display: flex;
-    
 
-}
 .drawings ul li {
     display: flex;
     flex-direction: column;
@@ -387,7 +384,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: -2rem;
+    margin-top: -1.5rem;
 }
 
 .free h4,
@@ -443,6 +440,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 15px;
+    color: white;
 }
 
 .worlds h1 {
@@ -463,7 +461,7 @@ body {
     grid-template-columns: 2, 1fr;
     grid-template-rows: 1, 1fr;
     padding: 2rem 0;
-    margin-top: -15rem;
+    margin-top: -240px;
 }
 
 .faces {
@@ -529,7 +527,7 @@ body {
 .info {
     display: flex;
     justify-content: space-around;
-    padding: 20px 10rem;
+    padding: 20pxrem;
 }
 
 .information ul {
@@ -580,6 +578,7 @@ footer {
     body {
         background-color: gray;
         width: 100%;
+       
     }
 
     .container {
@@ -588,7 +587,9 @@ footer {
         font-size: medium;
         width: 100%;
         border: solid red 2px;
+        overflow-x: hidden;
     }
+
     .head{
         display: flex;
         flex-direction: column;
@@ -608,6 +609,11 @@ footer {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+    }
+    .drawings {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     
 
@@ -644,11 +650,11 @@ footer {
         
     }
     .company-img{
-        width: 40px;
+        width: 30px;
 
     }
     .companies ul{
-        width: 80%;
+        width: 70%;
     }
    .news-letter{
     width: 90%;
@@ -673,6 +679,7 @@ footer {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    align-items: center;
 
    }
    .contact-us{
@@ -684,9 +691,10 @@ footer {
    .info{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    align-items: center;
 
    }
+   
    .information ul{
     display: flex;
     flex-direction: column;
